samples/_failures_safe/1761296500_38d226_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_3a4920be.c: In function ‘main’:
./samples/SAFE/__tmp_3a4920be.c:145:5: error: expected declaration or statement at end of input
  145 |     size_t compressed_size = compress_data(&params, input_buffer, input_len, output_buffer, sizeof(output_buffer));
      |     ^~~~~~
